fixing space gap at media screens with header ft bar , also adding portait to media queries

--- a/public/css/_index-landing-MS.scss
+++ b/public/css/_index-landing-MS.scss
@@ -1,7 +1,8 @@
 
-//Landing Text Index.html
+@media (orientation: portrait) {
+    //Landing Text Index.html
 @media screen and (max-width: 1480px)and (min-width: 1200px){
-    %backgroundImg,.landing-image.overlay {
+    %backgroundImg,.landing-image.overlay,.landing-image.home {
         height:95vh;
     }
     .landing-header{
@@ -11,13 +12,18 @@
     .landing-headline{
        padding-top:.5em;
        font-size:40pt;
+       height:40vh;
     }
     
     .landing-subtext{
-        padding-top:1.75em;
+        margin-top:1.75em;
         font-size:20pt;
+        height:20vh;
     }
+
 }
+
+
 
 @media screen and (max-width: 1199px)and (min-width: 990px){
     %backgroundImg,.landing-image.overlay {
@@ -30,11 +36,13 @@
     .landing-headline{
        padding-top:2em;
        font-size:40pt;
+       height:40vh;
     }
     
     .landing-subtext{
-        padding-top:3em;
+        margin-top:3em;
         font-size:20pt;
+        height:20vh;
     }
 }
 
@@ -49,11 +57,13 @@
     .landing-headline{
        padding-top:2em;
        font-size:32pt;
+       height:40vh;
     }
     
     .landing-subtext{
-        padding-top:2.5em;
+        margin-top:2.5em;
         font-size:16pt;
+        height:20vh;
     } 
 }
 
@@ -69,11 +79,13 @@
     .landing-headline{
        padding-top:1.5em;
         font-size:32pt;
+        height:40vh;
     }
     
     .landing-subtext{
-        padding-top:3.5em;
+        margin-top:3.5em;
         font-size:16pt;
+        height:20vh;
         
     } 
 }
@@ -90,11 +102,13 @@
     .landing-headline{
        padding-top:1em;
         font-size:24pt;
+        height:40vh;
     }
     
     .landing-subtext{
-        padding-top:2em;
+        margin-top:2em;
         font-size:14pt;
+        height:20vh;
         
     } 
 }
@@ -108,13 +122,18 @@
     }
     
     .landing-headline{
-       padding-top:1em;
-        font-size:22pt;
+       padding-top:2em;
+        font-size:20pt;
+        height:30vh;
     }
     
     .landing-subtext{
-        padding-top:1em;
+        //padding-top:1em;
+        margin-top:4em;
         font-size:12pt;
+        height:15vh;
         
     } 
+}
+
 }
