--- a/public/css/_nav-MS.scss
+++ b/public/css/_nav-MS.scss
@@ -17,7 +17,13 @@
 //Restaurant location bar @ Nav
 @media screen and (max-width: 991px)and (min-width: 0px){
     header .hd-ft-bar{
-        display: none;
+       display: none;
+    }
+    .navbar{
+        position: fixed;
+        top:0;
+        z-index: 2;
+        width:100%;
     }
 
     #navbarTogglerDemo02{
